--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@types/styled-components": "^5.1.34",
     "konva": "^9.3.0",
+    "lib0": "^0.2.42",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
+    "simple-peer": "^9.11.0",
     "styled-components": "^6.1.8",
+    "ws": "^8.16.0",
+    "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^1.5.3",
     "yjs": "^13.6.11"
