--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@types/styled-components": "^5.1.34",
+    "agora-rtc-sdk-ng": "^4.20.0",
     "konva": "^9.3.1",
     "lib0": "^0.2.42",
     "lodash": "^4.17.21",
