voice chat webrtc 240205

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@types/express": "^4.17.21",
+    "@types/socket.io": "^3.0.2",
     "@types/styled-components": "^5.1.34",
     "agora-rtc-sdk-ng": "^4.20.0",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "konva": "^9.3.1",
     "lib0": "^0.2.42",
     "lodash": "^4.17.21",
@@ -29,6 +33,9 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.5",
+    "react-router-dom": "^6.22.0",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
     "ws": "^8.16.0",
     "y-protocols": "^1.0.6",
@@ -37,9 +44,14 @@
     "yjs": "^13.6.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
