--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.5",
+    "react-textarea-autosize": "^8.5.3",
     "styled-components": "^6.1.8",
     "ws": "^8.16.0",
     "y-protocols": "^1.0.6",
