--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-konva-utils": "^1.0.5",
     "react-textarea-autosize": "^8.5.3",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0",
     "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
@@ -42,6 +43,7 @@
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
