--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mui-color-input": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.5",
     "react-router-dom": "^6.22.0",
